Closed
Bug 522515
Opened 16 years ago
Closed 12 years ago
"ASSERTION: null url in @font-face rule" with <base href="javascript:3">
Categories
(Core :: CSS Parsing and Computation, defect)
Tracking
()
RESOLVED
FIXED
mozilla26
People
(Reporter: jruderman, Assigned: jtd)
References
Details
(Keywords: assertion, crash, testcase)
Crash Data
Attachments
(4 files)
###!!! ASSERTION: null url in @font-face rule: 'face->mURI', file /Users/jruderman/central/layout/base/nsPresContext.cpp, line 1737
| Reporter | ||
Comment 1•16 years ago
|
||
Triggers the assertion above, plus:
###!!! ASSERTION: null font uri: 'aFontFaceSrc->mURI', file /Users/jruderman/central/layout/style/nsFontFaceLoader.cpp, line 233
| Reporter | ||
Comment 2•14 years ago
|
||
Now that the patch in bug 633299 has landed, the first assertion is also in layout/style/nsFontFaceLoader.cpp.
| Reporter | ||
Comment 3•12 years ago
|
||
| Reporter | ||
Updated•12 years ago
|
Crash Signature: [@ operator==(gfxFontFaceSrc const&, gfxFontFaceSrc const&) ]
Keywords: crash
| Reporter | ||
Updated•12 years ago
|
Severity: normal → critical
| Assignee | ||
Comment 4•12 years ago
|
||
Simply omit null URL's from userfont src array. Still need to support other src lists items:
@font-face {
family: test;
src: local(mytest), url(..funky..), url(..normal..);
}
Attachment #802046 -
Flags: review?(dbaron)
Comment on attachment 802046 [details] [diff] [review]
patch, omit null urls from userfont src array
r=dbaron, though I'd probably skip the "last" variable and just put that expression inside the () of RemoveElementAt.
Attachment #802046 -
Flags: review?(dbaron) → review+
| Assignee | ||
Comment 6•12 years ago
|
||
Pushed to inbound
https://hg.mozilla.org/integration/mozilla-inbound/rev/3a838a676e7c
Comment 7•12 years ago
|
||
And https://hg.mozilla.org/integration/mozilla-inbound/rev/f9e8e8ce552c since a couple of crashtests were expecting to get stuck with this assertion, and were surprised when they no longer hit it.
Comment 8•12 years ago
|
||
https://hg.mozilla.org/mozilla-central/rev/3a838a676e7c
https://hg.mozilla.org/mozilla-central/rev/f9e8e8ce552c
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla26
| Reporter | ||
Updated•12 years ago
|
Assignee: nobody → jdaggett
You need to log in
before you can comment on or make changes to this bug.
Description
•