Bug 522515 - omit null urls from inclusion in userfont src descriptor array. r=dbaron